[package]
name = "gd-nong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
directories = "5.0.1"
native-dialog = { version = "0.6.4", features = ["windows_dpi_awareness", "windows_visual_styles"] }
tempfile = "3.8.0"
ureq = "2.7.1"
